--- a/styles/main.css
+++ b/styles/main.css
@@ -13,6 +13,11 @@ body {
     text-align: center;
 }
 
+.container h1 {
+    color: black;
+    text-shadow: 0 0 10px white;
+}
+
 #videoPlayer {
     width: 100%;
     max-width: 800px;
